@@ -75,18 +75,19 @@ module EnumerateBy
           primary_key_name = reflection.primary_key_name
           class_name = reflection.class_name
           klass = reflection.klass
+          klass_primary_key = klass.primary_key.to_sym
           
           # Inclusion scopes
           %W(with_#{name} with_#{name.to_s.pluralize}).each do |scope_name|
             named_scope scope_name.to_sym, lambda {|*enumerators| {
-              :conditions => {primary_key_name => klass.find_all_by_enumerator!(enumerators).map(&:id)}
+              :conditions => {primary_key_name => klass.find_all_by_enumerator!(enumerators).map(&klass_primary_key)}
             }}
           end
           
           # Exclusion scopes
           %W(without_#{name} without_#{name.to_s.pluralize}).each do |scope_name|
             named_scope scope_name.to_sym, lambda {|*enumerators| {
-              :conditions => ["#{primary_key_name} NOT IN (?)", klass.find_all_by_enumerator!(enumerators).map(&:id)]
+              :conditions => ["#{primary_key_name} NOT IN (?)", klass.find_all_by_enumerator!(enumerators).map(&klass_primary_key)]
             }}
           end
           
