@@ -2,7 +2,7 @@ class CreateCars < ActiveRecord::Migration
   def self.up
     create_table :cars do |t|
       t.string :name
-      t.references :color
+      t.references :color, :legacy_color
       t.references :feature, :class_name => 'Color', :polymorphic => true
     end
   end
