@@ -57,6 +57,23 @@ class EnumerationWithFinderConditionsTest < ActiveRecord::TestCase
   end
 end
 
+class EnumerationWithCustomPrimaryKeyAndFinderConditionsTest < ActiveRecord::TestCase
+  def setup
+    @red = create_legacy_color(:name => 'red')
+    @blue = create_legacy_color(:name => 'blue')
+    @red_car = create_car(:name => 'Ford Mustang', :legacy_color => @red)
+    @blue_car = create_car(:name => 'Ford Mustang', :legacy_color => @blue)
+  end
+  
+  def test_should_replace_enumerations_in_dynamic_finders
+    assert_equal @red_car, Car.find_by_legacy_color('red')
+  end
+  
+  def test_should_replace_enumerations_in_find_conditions
+    assert_equal @red_car, Car.first(:conditions => {:legacy_color => 'red'})
+  end
+end
+
 class EnumerationWithFinderUpdatesTest < ActiveRecord::TestCase
   def setup
     @red = create_color(:name => 'red')
@@ -84,5 +101,19 @@ class EnumerationWithFinderUpdatesTest < ActiveRecord::TestCase
     Car.update_all({:color => %w(red blue)}, :name => 'Ford Mustang')
     @red_car.reload
     assert_equal @red, @red_car.color
+  end
+end
+
+class EnumerationWithCustomPrimaryKeyAndFinderUpdatesTest < ActiveRecord::TestCase
+  def setup
+    @red = create_legacy_color(:name => 'red')
+    @blue = create_legacy_color(:name => 'blue')
+    @red_car = create_car(:name => 'Ford Mustang', :legacy_color => @red)
+  end
+  
+  def test_should_replace_enumerations_in_update_conditions
+    Car.update_all({:legacy_color => 'blue'}, :name => 'Ford Mustang')
+    @red_car.reload
+    assert_equal @blue, @red_car.legacy_color
   end
 end
